[package]
name = "spin-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
hyperium = { package = "http", version = "1.0.0" }
spin-executor =  "4.0.0"
tonic = { version = "0.13.1", features = ["prost", "router"], default-features = false}
tower-service = { version = "0.3.2" }
wasi-hyperium = "0.3.0"
wasi = "=0.13.1"
