[package]
name = "routeguide-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures = "0.3.28"
http = "1.0.0"
prost = "0.13.5"
spin-grpc = { path = "../.." }
spin-sdk =  "4.0.0"
tonic = { version = "0.13.1", features = ["codegen", "prost", "router"], default-features = false}
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }